Finished the entire page, gotta fix some margins and text alignment, but is pretty close, had to clone the entire repository because of some corrupted files

--- a/style.css
+++ b/style.css
@@ -74,15 +74,17 @@ img{
 
 button.signup{
     background-color: #3882F2;
-    width: max-content;
-    border-color:#3882F2; 
-    border-radius: 15px;
-    padding-left: 20px;
-    padding-right: 20px;
+    padding-left: 8px;
+    border-radius: 10px;
+    width: 130px;
     height: 40px;
     color: white;
     font-weight: 700;
     margin: 0%;
+    border-style: none;
+    font-size:medium;
+    
+
 }
 
 .Info h2{
@@ -139,8 +141,58 @@ button.signup{
 }
 .quoteSection i{
     text-align: left;
+    font-style:italic;
 }
 
 .quote{
     width:900px;
+}
+
+.action{
+     display: flex;
+     justify-content: center;
+     align-items: center;
+     margin: 100px;
+}
+
+.squareContainer{
+    display: flex;
+    background-color: #3882F2;
+    width: 900px;
+    justify-content: center;
+    align-items: center;
+    padding: 20px;
+    border-style: none;
+    border-radius: 10px;
+}
+
+.signup2{
+    background-color: #3882F2;
+    padding-left: 8px;
+    border-radius: 10px;
+    width: 130px;
+    height: 40px;
+    color: white;
+    font-weight: 700;
+    margin: 0%;
+    border-style: solid;
+    font-size:medium;
+    border-color: white;
+    margin-left: 50px;
+}
+
+.text{
+    color: white;
+    padding-right: 50px;   
+}
+
+.footer{
+    display: flex;
+    text-align: center;
+    color: #E5E7EB;
+    background-color:#1F2937;
+    height: 80px;
+    align-items: center;
+    justify-content: center;
+    padding: 8px;
 }
